# TorchKissAnnPostdict

./: CMakeLists.txt  README.md
scripts/: accumplot.p  accumplot.sh  buildnet.py  devdiff.patch  logplot.py  lossplot.p  lossplot.sh  onnxexport.py  plotdatasetreport.py  singleaccumplot.sh
scripts/nets/: convnet.py  resnet1d.py  simplenet.py  upsamplenet.py
src/: CMakeLists.txt  globals.cpp  globals.h  net.cpp  net.h  test.cpp  torchkissann_plot  torchph.h
src/ann/: autoencode.h  autoencoder.cpp  autoencoder.h  classification.cpp  classification.h  convnet.cpp  convnet.h  regression.cpp  regression.h  scriptnet.cpp  scriptnet.h  simplenet.cpp  simplenet.h
src/data/: classextractordataset.cpp  classextractordataset.h  dataexport.h  eisdataset.h  eistotorch.cpp  eistotorch.h  print.cpp  print.h  regressiondataset.h
src/data/loaders/: coincellhellloader.cpp  coincellhellloader.h  dirdataset.cpp  dirdataset.h  dirloader.cpp  dirloader.h  eisspectradataset.cpp  eisspectradataset.h  regressiondirloader.cpp  regressiondirloader.h  regressionloader.cpp  regressionloader.h  tardataset.cpp  tardataset.h  tarloader.cpp  tarloader.h
src/datasetinfo/: CMakeLists.txt  datasetinfo.cpp  options.h
src/fit/: fit.cpp  fit.h
src/gan/: gan.cpp  gan.h  networks.cpp  networks.h  simplenet.cpp  simplenet.h
src/inference/: CMakeLists.txt  inference.cpp  options.h
src/loss/: eisdistanceloss.cpp  eisdistanceloss.h  losstermination.h
src/test/: CMakeLists.txt  options.h  test.cpp
src/train/: CMakeLists.txt  options.h  train.cpp
src/tune/: CMakeLists.txt  options.h  tune.cpp
src/utils/: commonoptions.h  gitrev.cpp.in  gitrev.h  incbin.h  indicators.hpp  log.cpp  microtar.cpp  microtar.h  modelscript.cpp  modelscript.h  ploting.cpp  ploting.h  r2score.cpp  r2score.h  randomgen.cpp  randomgen.h  save.cpp  save.h  seqprint.h  tensoroperators.cpp  tensoroperators.h  tensoroptions.h  tokenize.cpp  tokenize.h  trainlog.cpp  trainlog.h
